Added Weekly Report 1

--- a/src/notebooks/CROHME EDA.ipynb
+++ b/src/notebooks/CROHME EDA.ipynb
@@ -17,6 +17,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27863f95-d179-41bc-89e1-69459ae958a2",
+   "metadata": {},
+   "source": [
+    "CROHME 2023, an extension of the CROHME dataset series, features the OffHME (Offline Handwritten Mathematical Expressions) subset designed for evaluating offline recognition systems. This subset contains handwritten mathematical expressions representing diverse mathematical symbols and structures, providing annotations for ground truth comparisons. Noteworthy is its variability in handwriting styles, presenting a challenge for accurate interpretation by recognition systems. The dataset supports both training and evaluation of recognition models, mirroring real-world scenarios where users write entire expressions before recognition, making it a valuable resource for advancing handwritten math recognition technology.\n",
+    "\n",
+    "The OffHME subset of the CROHME 2023 dataset offers researchers and practitioners a comprehensive dataset for testing and enhancing offline recognition systems for handwritten mathematical expressions. With its annotations and diverse handwriting styles, it facilitates accurate evaluation of recognition algorithms. This subset's focus on offline recognition aligns with real-world usage scenarios, such as digital note-taking and educational platforms, making it a pivotal resource for improving the accuracy and reliability of handwritten math recognition systems."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2f90bd92-5c10-47ba-83e4-d87081d61962",
@@ -52,7 +62,6 @@
    "outputs": [],
    "source": [
     "# CROHME23 OffHME paths\n",
-    "\n",
     "off_img_path = crohme_path + 'IMG/train/OffHME/'\n",
     "off_lg_path = crohme_path + 'SymLG/train/OffHME/'"
    ]
