Updated custom to detection

--- a/src/notebooks/test_detection_dataset.ipynb
+++ b/src/notebooks/test_detection_dataset.ipynb
@@ -25,7 +25,7 @@
     "# Set input and output paths\n",
     "project_path = '/Users/sumukhiganesan/GitHub/ds5500-capstone-project/'\n",
     "data_path = project_path + 'datasets/'\n",
-    "custom_ds_path = data_path + 'custom_dataset/'"
+    "custom_ds_path = data_path + 'detection_dataset/'"
    ]
   },
   {
